[WM] Fix text alignment in app menu on mobile

--- a/laskyawm-mobile.css
+++ b/laskyawm-mobile.css
@@ -111,7 +111,6 @@
 	top: 54px;
 }
 .barMenu > div {
-	vertical-align: top;
 	line-height: 32px;
 	height: 32px;
 	margin: 2px;
@@ -119,6 +118,7 @@
 .barMenu > div > img {
 	width: 32px;
 	height: 32px;
+	vertical-align: -9px;
 }
 #sidebar {
 	display: none;
